--- a/IS403P1/IS403P1.csproj
+++ b/IS403P1/IS403P1.csproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\charity.jpg" />
     <Content Include="Content\Images\christus_statue_temple_square_salt_lake_city.jpg" />
     <Content Include="Content\Images\flag_EC.png" />
     <Content Include="Content\Images\flag_MX.jpg" />
@@ -160,7 +161,7 @@
     <Content Include="Content\Images\jesus_charity.jpg" />
     <Content Include="Content\Images\jesus_love.jpg" />
     <Content Include="Content\Images\scripture_study.jpg" />
-    <Content Include="Content\Image\Green Dragons.JPG" />
+    <Content Include="Content\Images\Green Dragons.JPG" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
